# MSR

./: .dockerignore  .env.example  .gitignore  Dockerfile.gpu  README.md  TODO.md  docker-compose.gpu.yml  pyproject.toml
config/: app.toml  models.toml
docs/: architecture.md  deep-research-report.md  linux-gpu-handoff.md  multi-speaker-offline-sdk-research-2026-04.md  roadmap.md  speaker-registry-design.md
models/: README.md
samples/: README.md
src/msr/: __init__.py
src/msr/api/: routes_admin.py  routes_public.py  schemas.py
src/msr/app/: lifespan.py  main.py
src/msr/backends/asr/: base.py  faster_whisper_backend.py  funasr_backend.py  qwen_asr_backend.py
src/msr/backends/diarization/: __init__.py  base.py  pyannote_backend.py  three_d_speaker_backend.py
src/msr/backends/vad/: __init__.py  base.py  webrtc_backend.py
src/msr/core/: config.py  errors.py  logging.py  runtime_env.py  security.py  types.py
src/msr/services/: audio_io.py  container.py  model_manager.py  resource_monitor.py  task_manager.py  transcription_service.py
src/msr/web/: app.js  index.html  models.html  runtime.html  styles.css  transcribe.html
tests/: test_app.py
tools/: bootstrap_models.py  docker_offline_check.sh  doctor.py  runtime_env.sh  smoke_api.py
