[project]
name = "msr"
version = "0.1.0"
description = "MSR (Multi Speaker Recognization) offline transcription service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic>=2.9.0,<3.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "numpy>=1.26.0,<3.0.0",
  "librosa>=0.10.2,<1.0.0",
  "soundfile>=0.12.1,<1.0.0",
  "psutil>=5.9.8,<8.0.0",
  "setuptools>=80.0.0,<81.0.0",
  "webrtcvad>=2.0.10,<3.0.0",
  "nvidia-ml-py>=12.560.30,<13.0.0",
]

[project.optional-dependencies]
default-runtime = [
  "funasr>=1.2.0",
  "speakerlab",
  "addict>=2.4.0,<3.0.0",
  "simplejson>=3.20.0,<4.0.0",
  "sortedcontainers>=2.4.0,<3.0.0",
  "torch==2.10.*",
  "torchaudio==2.10.*",
  "torchvision==0.25.*",
]
funasr = [
  "funasr>=1.2.0",
  "torch==2.10.*",
  "torchaudio==2.10.*",
  "torchvision==0.25.*",
]
faster-whisper = [
  "faster-whisper>=1.1.0",
]
3d-speaker = [
  "speakerlab",
  "addict>=2.4.0,<3.0.0",
  "simplejson>=3.20.0,<4.0.0",
  "sortedcontainers>=2.4.0,<3.0.0",
  "torch==2.10.*",
  "torchaudio==2.10.*",
  "torchvision==0.25.*",
]
pyannote = [
  "pyannote.audio>=3.1.0",
  "torch==2.10.*",
  "torchaudio==2.10.*",
  "torchvision==0.25.*",
]
gpu-runtime = [
  "funasr>=1.2.0",
  "faster-whisper>=1.1.0",
  "speakerlab",
  "pyannote.audio>=3.1.0",
  "addict>=2.4.0,<3.0.0",
  "simplejson>=3.20.0,<4.0.0",
  "sortedcontainers>=2.4.0,<3.0.0",
  "torch==2.10.*",
  "torchaudio==2.10.*",
  "torchvision==0.25.*",
]
dev = [
  "httpx>=0.27.0,<1.0.0",
  "pytest>=8.3.0,<9.0.0",
]

[project.scripts]
msr-api = "msr.app.main:run"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/msr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
